BDD and minor fixes